Fixed the overflow issues

--- a/main.css
+++ b/main.css
@@ -30,6 +30,7 @@ li{
 .container-fluid{
 	padding-right: 0px;
 	padding-left: 0px;
+	overflow-x: hidden;
 }
  
 .left-nav{
